--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "swagger-node-express": "~2.0",
+    "minimist": "*",
+    "body-parser": "1.9.x",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "swagger-jsdoc": "^1.3.0"
   }
 }
